Updates for lab3

--- a/lib/views/layout.jade
+++ b/lib/views/layout.jade
@@ -35,3 +35,7 @@ html
                         li
                          a(href='http://www.startupinstitute.com/') Startup Institute
 
+
+        div#alert
+            -if (typeof(error) !== "undefined")
+                div.alert-box.alert #{error.message}
